--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,25 @@
-Githubusers demo
-<router-outlet></router-outlet>
+<div *ngIf="session.initialized; else loading">
+    <div class="nav">
+        <div class="brand">Githubusers demo</div>
+        <div class="menu">
+            <span [routerLink]="['/user-list']">Users</span>
+            <span *ngIf="session.loggedInUser" [routerLink]="['/my-issues']">My Issues</span>
+        </div>
+        <div class="user">
+            <ng-container *ngIf="session.loggedInUser; else anonymous">
+                {{ session.loggedInUser.email }}
+                <span class="login" (click)="session.logout()">Logout</span>
+            </ng-container>
+            <ng-template #anonymous>
+                Anonymous user
+                <span class="login" (click)="session.triggerLogin()">Login</span>
+            </ng-template>
+        </div>
+    </div>
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+<ng-template #loading>
+    <div class="loading">Waiting for GitHub ..</div>
+</ng-template>
