--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,13 @@ body {
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+
+.btn {
+    margin: 0 16px;
+    padding: 0 8px;
+    background-color: #bbb;
+    border-radius: 4px;
+    box-sizing: border-box;
+    cursor: pointer;
+    line-height: 32px;
+}
