--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,7 @@
         padding: 0 16px 0 24px;
     }
 
-    .menu span, .login {
+    .menu span, .login, .profile {
         padding: 0 8px;
         cursor: pointer;
         &:hover {
