--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -43,6 +43,10 @@ table {
     text-align: center;
 }
 
+.loading {
+    line-height: 32px;
+}
+
 .options {
     &.top {
         margin-bottom: 16px;
